fixed hero imgs overflow

--- a/14/styles/partials/_layouts.scss
+++ b/14/styles/partials/_layouts.scss
@@ -121,8 +121,7 @@ display: inline-block;
 .hero_bg{
   width: 100%;
   max-width: 100%;
- 
-  // object-fit: none;
+  height: 100%;
 }
 .hero_bg_img{
   justify-content: center;
@@ -153,9 +152,9 @@ display: inline-block;
  }
 .image_wrapper{
   display: inline-block;
-  // max-width: 100%;
-  // max-height: 470px;
-  object-fit: contain;
+  max-width: 100%;
+  max-height: 470px;
+ 
 }
 .text_wrapper{
   max-width: 50%;
@@ -169,9 +168,7 @@ display: inline-block;
 .hide_arrow{
   display: none;
 }
-.text_content{
- max-width: 100%;
-}
+ 
 .title {
   max-width: 100%;
  
